# misis2024s-23-04-khovalyg-d-e

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
clean/: style.sh
prj.codeforces/: 0004a.cpp  0009a.cpp  0025a.cpp  0043a.cpp  0071a.cpp  0136b.cpp  0155a.cpp  0230a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0479a.cpp  0617a.cpp  0705a.cpp  0731a.cpp  0732a.cpp  0816b.cpp  0822a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  0996a.cpp  1029c.cpp  1215b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1472b.cpp  1498a.cpp  1512c.cpp  1559a.cpp  1583a.py  1585a.cpp  1669a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1712a.cpp  1712b.cpp  (+29 more)
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.cpp  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp
