set(CMAKE_CXX_STANDARD 20)

add_executable(0004a 0004a.cpp)
add_executable(0136b 0136b.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0479a 0479a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0705a 0705a.cpp)
add_executable(0732a 0732a.cpp)
add_executable(0822a 0822a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1472b 1472b.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1669d 1669d.cpp)
add_executable(1690d 1690d.cpp)
add_executable(1712a 1712a.cpp)
add_executable(1712b 1712b.cpp)
add_executable(1713a 1713a.cpp)
add_executable(1713b 1713b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1734b 1734b.cpp)
add_executable(1741a 1741a.cpp)
add_executable(1741b 1741b.cpp)
add_executable(1744c 1744c.cpp)
add_executable(1760a 1760a.cpp)
add_executable(1760b 1760b.cpp)
add_executable(1760c 1760c.cpp)
add_executable(1762a 1762a.cpp)
add_executable(1762b 1762b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)

add_executable(0009a 0009a.cpp)
add_executable(0025a 0025a.cpp)
add_executable(0043a 0043a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0155a 0155a.cpp)
add_executable(0731a 0731a.cpp)
add_executable(0816b 0816b.cpp)
add_executable(0996a 0996a.cpp)
add_executable(1029c 1029c.cpp)
add_executable(1215b 1215b.cpp)
add_executable(1498a 1498a.cpp)
add_executable(1583a 1583a.py)
add_executable(1669a 1669a.cpp)
add_executable(1714a 1714a.cpp)
add_executable(1764a 1764a.cpp)
add_executable(1764b 1764b.cpp)
add_executable(1805a 1805a.cpp)
add_executable(1807b 1807b.cpp)
add_executable(1820b 1820b.cpp)
add_executable(1896a 1896a.cpp)
add_executable(1946a 1946a.cpp)
add_executable(1946b 1946b.cpp)
add_executable(1969a 1969a.cpp)
add_executable(1973a 1973a.cpp)